# AtomEngine

./: .gitignore  .gitmodules  AtomEngineConfig.cmake  CMakeLists.txt  README.md  SoulSphereEngineConfig.cmake  doxygen.conf
docs/: CMakeLists.txt  doxygen-layout.xml  doxygen.conf
include/: AtomEngine.hpp  SSEngine.hpp
include/AtomEngine/: Containers.hpp  Core.hpp  Memory.hpp  Reflection.hpp
include/AtomEngine/Callable/: BoxedCallable.hpp  Callable.hpp  CallableBox.hpp  CallableImpl.hpp  ICallable.hpp  Loops.hpp
include/AtomEngine/Containers/: Array.hpp  ArrayBase.hpp  ArrayIterator.hpp  ArrayView.hpp  BidirectionalIterator.hpp  BidirectionalIteratorBox.hpp  BoxedBidirectionalIterator.hpp  BoxedForwardIterator.hpp  BoxedIterator.hpp  BoxedRandomAccessIterator.hpp  Collection.hpp  Comparer.hpp  ConstArray.hpp  ConstArrayBase.hpp  ConstCollection.hpp  ConstList.hpp  DynamicArray.hpp  DynamicCollection.hpp  DynamicList.hpp  ForLoopIterator.hpp  ForwardIterator.hpp  ForwardIteratorBox.hpp  IArray.hpp  IBidirectionalIterable.hpp  IBidirectionalIterator.hpp  ICollection.hpp  IComparer.hpp  IConstArray.hpp  IConstCollection.hpp  IConstIterable.hpp  IConstList.hpp  IDynamicArray.hpp  IDynamicCollection.hpp  IDynamicList.hpp  IForwardIterator.hpp  IIterable.hpp  IIterator.hpp  IList.hpp  IRandomAccessIterator.hpp  InitializerList.hpp  (+8 more)
include/AtomEngine/Containers/Internal/: ArrayImpl.hpp  ConstArrayImpl.hpp
include/AtomEngine/Core/: Byte.hpp  Core.hpp  LanguageFeatures.hpp  Utils.hpp
include/AtomEngine/Invokable/: IInvokable.hpp  InvokableBox.hpp  InvokableImpl.hpp
include/AtomEngine/Memory/: Allocator.hpp  BoxedObject.hpp  BufHeapMemPool.hpp  Core.hpp  DefaultAllocator.hpp  DynamicLinkedMemPool.hpp  FastDynamicLinkedMemPool.hpp  FastLinkedMemPool.hpp  GlobalAllocation.hpp  GlobalAllocator.hpp  HeapMemPool.hpp  IAllocator.hpp  IDynamicMemPool.hpp  IMemPool.hpp  LegacyAllocator.hpp  LinkedMemPool.hpp  MemPool.hpp  ObjectBox.hpp  ObjectPointer.hpp  Pointers.hpp  Ptr.hpp  SharedPtr.hpp  StackMemPool.hpp  UniqueBox.hpp  UniquePtr.hpp
include/AtomEngine/Reflection/: Core.hpp
include/AtomEngine/String/: ConstStringIterator.hpp  IConstString.hpp  StringIterator.hpp
include/AtomEngine/String/Internal/: ConstStringImpl.hpp
include/SSEngine/: Collections.hpp  Containers.hpp  Core.hpp  Memory.hpp  Platform.hpp  Reflection.hpp
include/SSEngine/Callable/: Callable.hpp
include/SSEngine/Collections/: Array.hpp  ArrayIterator.hpp  Collection.hpp  Comparer.hpp  ContainerDefination.hpp  Iterable.hpp  Iterator.hpp  IteratorPointer.hpp  List.hpp  StackArray.hpp
include/SSEngine/Containers/: Array.hpp  ArrayIterator.hpp  Collection.hpp  Comparer.hpp  ContainerDefination.hpp  Iterable.hpp  Iterator.hpp  IteratorPointer.hpp  List.hpp  StackArray.hpp
include/SSEngine/Core/: Callable.hpp  Core.hpp  LanguageFeatures.hpp  Utils.hpp
include/SSEngine/Memory/: Allocators.hpp  BufHeapMemPool.hpp  Core.hpp  FastLinkedMemPool.hpp  GlobalAllocation.hpp  HeapMemPool.hpp  LegacyAllocator.hpp  LinkedMemPool.hpp  MemPool.hpp  ObjectPointer.hpp  Pointers.hpp  StackMemPool.hpp
include/SSEngine/Reflection/: Core.hpp
sandbox/: CMakeLists.txt  Sandbox.cpp
src/: AtomEngine.cpp  CMakeLists.txt  Collections.cpp  Containers.cpp  Memory.cpp  Reflection.cpp  SSEngine.cpp
src/AtomEngine/Memory/: GlobalAllocation.cpp
tests/: CMakeLists.txt
tests/AtomEngine/Callable/: TestBoxedCallable.cpp  TestCallable.cpp  TestCallableBox.cpp
tests/AtomEngine/Containers/: TestArrayIterator.cpp  TestDynamicArray.cpp  TestIConstIterable.cpp  TestInitializerList.cpp  TestIterable.cpp  TestIteratorPointer.cpp
tests/AtomEngine/Core/: TestByte.cpp
tests/AtomEngine/Memory/: TestPtr.cpp  TestSharedPtr.cpp  TestStackMemPool.cpp  TestUniquePtr.cpp
tests/AtomEngine/String/: TestConstString.cpp  TestStringIterator.cpp
tests/SSEngine/Callable/: TestCallable.cpp
tests/SSEngine/Containers/: TestIteratorPointer.cpp
tests/SSEngine/Memory/: TestStackMemPool.cpp
