cmake_minimum_required(VERSION 3.0.0)
project(AtomEngine VERSION 0.1.0 LANGUAGES CXX)

set(ATOM_ENGINE_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
set(ATOM_ENGINE_SOURCE_DIR ${ATOM_ENGINE_ROOT_DIR}/src)
set(ATOM_ENGINE_INCLUDE_DIR ${ATOM_ENGINE_ROOT_DIR}/include)
set(ATOM_ENGINE_DOCS_DIR ${ATOM_ENGINE_ROOT_DIR}/docs)
set(ATOM_ENGINE_TESTS_DIR ${ATOM_ENGINE_ROOT_DIR}/tests)
set(ATOM_ENGINE_BENCH_DIR ${ATOM_ENGINE_ROOT_DIR}/bench)
set(ATOM_ENGINE_VENDORS_DIR ${ATOM_ENGINE_ROOT_DIR}/vendors)
set(ATOM_ENGINE_BUILD_DIR ${ATOM_ENGINE_ROOT_DIR}/build)

enable_testing()
add_subdirectory(src)
add_subdirectory(tests)